// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bubble Bubble component work 1`] = `
<div
  class="ant-bubble ant-bubble-start"
>
  <div
    class="ant-bubble-content ant-bubble-content-filled"
  >
    test
  </div>
</div>
`;

exports[`bubble rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-bubble ant-bubble-start ant-bubble-rtl"
>
  <div
    class="ant-bubble-content ant-bubble-content-filled"
  >
    test
  </div>
</div>
`;
